force-app/main/default/objects/Qualification_Criteria__c/Qualification_Criteria__c.object-meta.xml
<CustomObject>
    <label>Qualification Criteria</label>
    <nameField>
        <displayFormat>QC -{0000}</displayFormat>
        <label>Qualification Criteria Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualification Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>