force-app/main/default/objects/Qualification_Criteria__c/fields/Budget_QC__c.field-meta.xml
<CustomField>
    <fullName>Budget_QC__c</fullName>
    <label>Budget</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Budget</valueSetName>
    </valueSet>
</CustomField>