force-app/main/default/objects/Qualification_Criteria__c/fields/Configuration_QC__c.field-meta.xml
<CustomField>
    <fullName>Configuration_QC__c</fullName>
    <label>Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Configuration</valueSetName>
    </valueSet>
</CustomField>