force-app/main/default/objects/Qualification_Criteria__c/fields/Location_QC__c.field-meta.xml
<CustomField>
    <fullName>Location_QC__c</fullName>
    <label>Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Location</valueSetName>
    </valueSet>
</CustomField>