force-app/main/default/objects/Qualification_Criteria__c/fields/Possession_QC__c.field-meta.xml
<CustomField>
    <fullName>Possession_QC__c</fullName>
    <label>Possession</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Possession</valueSetName>
    </valueSet>
</CustomField>